<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TEST2</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="number_waypoints">Number of Waypoints</string>
    <string name="select_map">Select Map</string>
    <string-array name="number_waypoints">
        <item >0</item>
        <item >1</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
        <item >5</item>
        <item >6</item>
        <item >7</item>
        <item >8</item>
        <item >9</item>
        <item >10</item>
    </string-array>
    
    <string name="waypoint_prompt">select</string>
    <string name="transfer_ltl">Upload LTL</string>
    <string name="upload_ltl">Upload LTL</string>
    <string name="add_mission">Add Mission</string>
    <string name="del_mission">Del Mission</string>

</resources>