<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/selectMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/map"
            android:text="@string/select_map" />

        <Button
            android:id="@+id/addMission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/add"
            android:text="@string/add_mission" />

        <Button
            android:id="@+id/delMission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/remove"
            android:text="@string/del_mission" />

        <Button
            android:id="@+id/transferLTL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transfer_ltl" />

        <Button
            android:id="@+id/uploadLTL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/upload"
            android:text="@string/upload_ltl" />

        <CheckBox
            android:id="@+id/wayPoint1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="1" />

        <CheckBox
            android:id="@+id/wayPoint2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="2" />

        <CheckBox
            android:id="@+id/wayPoint3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="3" />

        <CheckBox
            android:id="@+id/wayPoint4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="4" />

        <CheckBox
            android:id="@+id/wayPoint5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="5" />

        <CheckBox
            android:id="@+id/wayPoint6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="6" />

        <CheckBox
            android:id="@+id/wayPoint7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="7" />

        <CheckBox
            android:id="@+id/wayPoint8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="8" />

        <CheckBox
            android:id="@+id/wayPoint9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="9" />

        <CheckBox
            android:id="@+id/wayPoint10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="15"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/ltlTextView"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="hello" />

        <com.CPS.test2.DrawView
            android:id="@+id/draw_view"
            android:layout_width="950dp"
            android:layout_height="match_parent" />

        <RadioGroup
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/robot1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="ROBOT 1" />

            <RadioButton
                android:id="@+id/robot2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="ROBOT 2" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/currentLtlTextView"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="Shows LTL here" />

</LinearLayout>